Add Azure Key Vault integration and remove placeholder features
- Integrated Azure Key Vault for secure secret management
- Added intelligent caching for local development (24-hour cache)
- Configured JWT secret to use Key Vault in production
- Removed weather forecast placeholder functionality
- Removed counter placeholder functionality
- Updated navigation to show only core features
- Added comprehensive Key Vault setup documentation

--- a/PrivateSocial.ApiService/appsettings.json
+++ b/PrivateSocial.ApiService/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "JwtSettings": {
-    "Secret": "your-256-bit-secret-key-for-development-only!",
+    "SecretName": "JwtSecret",
     "Issuer": "PrivateSocial",
     "Audience": "PrivateSocialUsers"
   }
