--- a/PrivateSocial.ApiService/appsettings.Development.json
+++ b/PrivateSocial.ApiService/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JwtSettings": {
+    "Secret": "your-256-bit-secret-key-for-development-only!",
+    "SecretName": "JwtSecret",
+    "Issuer": "PrivateSocial",
+    "Audience": "PrivateSocialUsers"
   }
 }
