--- a/PrivateSocial.AppHost/PrivateSocial.AppHost.csproj
+++ b/PrivateSocial.AppHost/PrivateSocial.AppHost.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <Sdk Name="Aspire.AppHost.Sdk" Version="9.3.0"/>
+    <Sdk Name="Aspire.AppHost.Sdk" Version="9.3.0" />
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
@@ -11,14 +11,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\PrivateSocial.ApiService\PrivateSocial.ApiService.csproj"/>
+        <ProjectReference Include="..\PrivateSocial.ApiService\PrivateSocial.ApiService.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Aspire.Hosting.AppHost" Version="9.3.0"/>
-        <PackageReference Include="Aspire.Hosting.Redis" Version="9.3.0"/>
-        <PackageReference Include="Aspire.Hosting.NodeJs" Version="9.3.0"/>
-        <PackageReference Include="Aspire.Hosting.MySql" Version="9.3.0"/>
+        <PackageReference Include="Aspire.Hosting.AppHost" Version="9.3.0" />
+        <PackageReference Include="Aspire.Hosting.Azure.KeyVault" Version="9.3.1" />
+        <PackageReference Include="Aspire.Hosting.Redis" Version="9.3.0" />
+        <PackageReference Include="Aspire.Hosting.NodeJs" Version="9.3.0" />
+        <PackageReference Include="Aspire.Hosting.MySql" Version="9.3.0" />
     </ItemGroup>
 
 </Project>
