--- a/PrivateSocial.Tests/PrivateSocial.Tests.csproj
+++ b/PrivateSocial.Tests/PrivateSocial.Tests.csproj
@@ -10,23 +10,27 @@
 
 
     <ItemGroup>
-        <PackageReference Include="Aspire.Hosting.Testing" Version="9.3.0"/>
-        <PackageReference Include="coverlet.collector" Version="6.0.2"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0"/>
-        <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2"/>
-        <PackageReference Include="xunit.v3" Version="2.0.0"/>
+        <PackageReference Include="Aspire.Hosting.Testing" Version="9.3.0" />
+        <PackageReference Include="coverlet.collector" Version="6.0.2" />
+        <PackageReference Include="FluentAssertions" Version="8.5.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.7" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
+        <PackageReference Include="Moq" Version="4.20.72" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2" />
+        <PackageReference Include="xunit.v3" Version="2.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\PrivateSocial.AppHost\PrivateSocial.AppHost.csproj"/>
+        <ProjectReference Include="..\PrivateSocial.AppHost\PrivateSocial.AppHost.csproj" />
+        <ProjectReference Include="..\PrivateSocial.ApiService\PrivateSocial.ApiService.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <Using Include="System.Net"/>
-        <Using Include="Microsoft.Extensions.DependencyInjection"/>
-        <Using Include="Aspire.Hosting.ApplicationModel"/>
-        <Using Include="Aspire.Hosting.Testing"/>
-        <Using Include="Xunit"/>
+        <Using Include="System.Net" />
+        <Using Include="Microsoft.Extensions.DependencyInjection" />
+        <Using Include="Aspire.Hosting.ApplicationModel" />
+        <Using Include="Aspire.Hosting.Testing" />
+        <Using Include="Xunit" />
     </ItemGroup>
 
 </Project>
