--- a/PrivateSocial.Web.React/package.json
+++ b/PrivateSocial.Web.React/package.json
@@ -8,6 +8,9 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
     "test:e2e": "E2E_START_SERVER=true playwright test",
     "test:e2e:ui": "E2E_START_SERVER=true playwright test --ui",
     "test:e2e:debug": "E2E_START_SERVER=true playwright test --debug",
@@ -26,18 +29,25 @@
     "@eslint/js": "^9.17.0",
     "@playwright/test": "^1.53.2",
     "@playwright/test-runner": "^0.9.24",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/ui": "^3.2.4",
     "concurrently": "^9.2.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.13.0",
+    "jsdom": "^26.1.0",
     "typescript": "~5.7.0",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.7",
+    "vitest": "^3.2.4",
     "wait-on": "^8.0.3"
   }
 }
