--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ riderModule.iml
 
 .idea/.idea.PrivateSocial/.idea/
 
+# Environment files
+.env
+.env.local
+
 # Node.js
 node_modules/
 npm-debug.log*
