--- a/PrivateSocial.AppHost/PrivateSocial.AppHost.csproj
+++ b/PrivateSocial.AppHost/PrivateSocial.AppHost.csproj
@@ -19,7 +19,7 @@
         <PackageReference Include="Aspire.Hosting.Azure.KeyVault" Version="9.3.1" />
         <PackageReference Include="Aspire.Hosting.Redis" Version="9.3.0" />
         <PackageReference Include="Aspire.Hosting.NodeJs" Version="9.3.0" />
-        <PackageReference Include="Aspire.Hosting.MySql" Version="9.3.0" />
+        <PackageReference Include="Aspire.Hosting.SqlServer" Version="9.3.0" />
     </ItemGroup>
 
 </Project>
